2005-10-26 Magnus Hagdorn
 * eis_ela.f90: add longitudinal ELA gradient
 * glide_setup.f90: make fraction of ice lost due to calving a run
   time parameter
 * glide.f90: use calving parameter
 * glide_types.f90: add variables for calving paramter, ice volume and
   ice area calculations
 * glide_mask.f90: calculate ice volume and area
 * glide_vars.def: add ice volume and area variables
 * glide.tex: document calving parameter
 * drivers.tex: document longitudinal ELA gradient

2005-10-14 Magnus Hagdorn
 * glide_types.f90: add fields for some time averages
 * glide_vars.def: request time averages for ubas, vbas and bmlt
 * glimmer_ncdf.f90: add some variables for taking time averages
 * ncdf_template.f90.in: add code for taking time averages
 * generate_ncvars.py: handle time averages
 * netcdf.tex: document changes to code generator
 * glide_launch.py: save arch and host to results file

2005-10-06 Magnus Hagdorn
 * definitions.tex: change date
 * configure.in: bump version to 0.5.5

2005-10-06 Magnus Hagdorn
 * definitions.tex: today's date
 * clean up documentation
 * configure.in: bump version
 * update NEWS

2005-10-04 Ian Rutt
 * Added testing for pgf90 compiler
 * Changed interface blocks in glimmer_interpolate.f90 to work with pgf90

2005-10-03 Magnus Hagdorn
 * glide_velo.f90: fix compiler warning, btrc should have intent(in)
 * glimmer_coordinates.f90: fix compiler warning

2005-10-03 Magnus Hagdorn
 * glide.tex: minor addition to docs
 * e2.adi.config: test config for ADI scheme
 * Makefile.am: run ADI test

2005-10-03 Magnus Hagdorn
 * merge THERMAL_LITHO branch

2005-09-08 Ian Rutt
 * Minor cosmetic changes
 * Improved ability to plug in emb mass-balance scheme without altering code
 * Fixed bug loadking config files for multiple instances
	
2005-09-07 Ian Rutt
 * Various enhancements and corrections to mass-balance masking in glint
 * Removed illegal elementals (glint_global_grid.f90) and unnecessary
   pures